# mcu_bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  user_guide.html
.github/: CODEOWNERS  pull_request_template.md
.github/actions/docker_setup/: action.yml
.github/workflows/: ci_pr.yml  ci_release.yml  ci_release_README.md
cmake/: config_build.mk  docker_targets.mk  docs_targets.mk  git_targets.mk  lint_targets.mk  mcu_bridge.cmake  readme.txt  targets_docker.mk  targets_docs.mk  targets_git.mk  targets_lint.mk
cmake/toolchain/: pic16f_toolchain-xc8.cmake  pic_toolchain-xc8-cc.cmake  readme.md  riscv_toolchain-elf-gcc.cmake  stm32_toolchain-arm-none-eabi.cmake  stm32g4_toolchain-arm-none-eabi.cmake  stm32l1_toolchain-arm-none-eabi.cmake
config/: CMakeLists.txt  build_config.mk  developement_config.mk  docker_config.mk  lint_config.mk  mcu_bridge_cfg.h  mcu_cfg.h
config/pic/: configuration_bits.h  pic_build_config.mk
config/stm32/: readme.md  stm32.cmake  stm32_build_config.mk  stm32_config.h.in
docker/: .clang-format  Dockerfile  check-sub-branch.sh  entrypoint.sh  lint-dcf.sh  lint.pl  readme.md
example/: CMakeLists.txt
example/gpio/: CMakeLists.txt  main.c
example/stm32/: CMakeLists.txt
example/stm32/gpio/: CMakeLists.txt  main.c
example/stm32/system/: STM32G474RETx_FLASH.ld
include/: common.h  mcu_bridge.h  mcu_gpio.h  regctrl.h
include/common/: status.h  utils.h
include/mcu/config/: mcu_cfg.h
include/mcu/drivers/: delay.h  gpio.h  gpio_dispatch.h
include/mcu_drivers/: mcu_gpio.h
internal/: build_analysis.md  stm32_flash_debug.md  template.c  template.h
internal/mcu_bridge_doxygen/: Makefile  doxygen.cfg  mcu_bridge.cfg  mcu_bridge_docs.cfg
internal/mcu_bridge_doxygen/images/: elf_format.xml
internal/mcu_bridge_doxygen/main_page/: main_page.md  mcu_bridge_block_diagram.drawio  sw_block_diagram.drawio
internal/mcu_bridge_doxygen/theme/: DoxygenLayout.xml  doxygen-awesome-tabs.js  header.html
internal/mcu_bridge_doxygen/tips_and_tricks/: build_analysis_tools.md  stm32_flash_debug.md  tips_and_tricks.md
internal/template_files/: template.c  template.h
internal/test_mcu_bridge/: test_stm32_build.py
internal/tools/: commitlint.config.js
mcu_platform/stm32/: CMakeLists.txt
mcu_platform/stm32/include/: stm32_gpio.h
mcu_platform/stm32/source/: stm32_gpio.c
product/: CMakeLists.txt
product/hw_pic/: CMakeLists.txt
product/hw_pic/cmake/: hw_pic.cmake  hw_pic_build_config.mk
product/hw_stm/cmake/: hw_stm.cmake  hw_stm_build_config.mk
source/: CMakeLists.txt  mcu_gpio.c
source/common/: utils.c
source/common_drivers/: delay.c  gpio.c
source/common_drivers/dispatch/: gpio_dispatch.h
source/mcu/: CMakeLists.txt
source/mcu/common/: gpio.c
source/mcu/common/dispatch/: gpio_dispatch.h
source/mcu/pic16f877a/: gpio_dispatch.c
source/mcu_bridge/: CMakeLists.txt  mcu_gpio_bridge.h
source/mcu_drivers/: CMakeLists.txt  mcu_gpio.c
source/pic16f877a/: gpio_dispatch.c
source/pic_drivers/: CMakeLists.txt  pic_check_macro.c  pic_gpio.c  pic_init.c  readme.md
source/stm32_drivers/: CMakeLists.txt  stm32_gpio.c  stm32_init.c
test/pic16f877a/: main.c
tools/: readme.md
tools/openocd/: openocd_flash_binary.sh  openocd_start_gdb_server.sh
